<package>
  <name>braccio_moveit_config</name>
  <version>0.0.1</version>
  <description>
     Moveit configuration files for the Arduino Braccio toy robot.
  </description>
  <author email="jonathan.balzer@vathos.net">Jonathan Balzer</author>
  <maintainer email="jonathan.balzer@vathos.net">Jonathan Balzer</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/jonabalzer/braccio_description</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_kinematics</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <build_depend>braccio_description</build_depend>
  <run_depend>braccio_description</run_depend>
  <run_depend>industrial_robot_simulator</run_depend>
  <run_depend>braccio_driver</run_depend>
</package>
